# blog

./: .gitignore  README.md  justfile  pyproject.toml  pyproject.toml.OFF  pyproject.toml.tmp  requirements.txt  titanica_10sample_3view.txt
data/: README_data.md  TitanicDatasets_Compared.xlsx  facts.csv  merged.csv  titanic_all_export.csv  titanic_join_key_analysis.xlsx  titanic_kaggle_analysis.xlsx  titanic_kaggle_tmp.csv  titanica_raw_tmp.csv
docs/: kaggle_email_reply.md
notebooks/: REVIEW_notebook.md  TitanicNotebok-GitHub.ipynb  reviewed.py  titanic-notebook-review.ipynb  titanic_mo.py  tmp.ipynb
scripts/: check_correspondence_data.py  interogate_excel_data.py  titanica_check.py
sql/: create_normalized_table.sql  create_titanica_encyclopedia_table.sql  export_kaggle_titanica_tables.sql  fuzzy_match_report.sql  report_join.sql
src/blog/: check_low_card_values.py  create_kaggle_titanic_table.py  create_titanica_encyclopedia_table.py  generate_fuzzy_match_report.py  report_join_titanica_train_test.py  titanic_raw.py  titanica_reconciler.py
titanic/: README.md  TitanicDatasets_Compared.xlsx  TitanicNotebok-GitHub.ipynb  merged.csv  titanic-notebook-review.html  titanic-notebook-review.ipynb
titanic/kernels/: README.md  TitanicNotebook_yanyinggu_Kaggle.ipynb
