[project]
name = "blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "notebook>=7.1.3",
    "lxml>=5.2.1",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.1",
    "itables>=2.0.0",
    "plotly>=5.21.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false
