[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "diskcache>=5.6.3",
    "duckdb>=1.3.2",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "logfire>=4.3.6",
    "loguru>=0.7.3",
    "lxml>=6.0.1",
    "marimo>=0.15.2",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.4",
]

[project.scripts]
blog = "blog:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
